# InstinctFi

./: .gitignore  AUDIT_REPORT.txt  Anchor.toml  Cargo.toml  PROJECT_REPORT.md  README.md  all_logs3.txt  all_logs5.txt  failed_run3.txt  failed_run4.txt  failed_run5.txt  job_log_25.txt  job_log_26.txt  job_log_27.txt  job_log_28.txt  log.txt  supabase_rls_migration.sql
.github/workflows/: anchor-deploy.yml  ci.yml
.next/dev/cache/: .rscinfo
app/: .env.example  jest.config.js  jest.config.ts  next.config.js  package-lock.json  package.json  supabase-cents-to-lamports-migration.sql  supabase-schema.sql  tailwind.config.js
app/public/: manifest.json  offline.html  sw.js
app/scripts/: test-auth.mjs
app/src/__tests__/integration/: rpc-critical-path.test.ts
app/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx  sitemap.ts
app/src/app/activity/: layout.tsx  page.tsx
app/src/app/admin/: AdminEditModal.tsx  layout.tsx  page.tsx
app/src/app/api/auth/verify/: route.ts
app/src/app/api/health/: route.ts
app/src/app/api/leaderboard/: route.ts
app/src/app/api/og/: route.tsx
app/src/app/api/polls/: route.ts
app/src/app/api/rpc/: _handler.ts  _validation.ts
app/src/app/create/: layout.tsx  page.tsx
app/src/app/docs/: page.tsx
app/src/app/embed/[id]/: layout.tsx  page.tsx
app/src/app/leaderboard/: layout.tsx  page.tsx
app/src/app/legal/privacy/: page.tsx
app/src/app/legal/terms/: page.tsx
app/src/app/polls/: layout.tsx  page.tsx
app/src/app/polls/[id]/: PollDetailClient.tsx  error.tsx  layout.tsx  metadata.ts  page.tsx
app/src/app/portfolio/: layout.tsx  page.tsx
app/src/app/profile/: layout.tsx  page.tsx
app/src/app/user/[wallet]/: page.tsx
app/src/components/: DarkModeToggle.tsx  DeletePollModal.tsx  EditPollModal.tsx  ErrorBoundary.tsx  FeaturedPollHeroCard.tsx  Footer.tsx  ImageUpload.tsx  InstallPrompt.tsx  LanguageToggle.tsx  LoadingScreen.tsx  Modal.tsx  Navbar.tsx  NotificationBell.tsx  OptionAvatar.tsx  PageTransition.tsx  PollCard.tsx  PollCardParts.tsx  PollComments.tsx  PollImage.tsx  Providers.tsx  ShareButton.tsx  SkeletonCard.tsx  VoteChart.tsx  VotePopup.tsx  WalletAdapterProvider.tsx  WalletConnectModal.tsx  WebVitals.tsx
app/src/lib/: apiClient.ts  badges.ts  bookmarks.tsx  confetti.ts  constants.ts  dataConverters.ts  errorRecovery.ts  jwt.ts  languageContext.tsx  notifications.tsx  program.base.ts  program.onchain.ts  program.ts  referrals.tsx  sanitize.ts  schemas.ts  seedPolls.ts  sounds.ts  supabase.ts  supabaseAdmin.ts  translations.ts  types.ts  uploadImage.ts  useCountdown.ts  useVote.ts  userProfiles.tsx  utils.ts
app/src/lib/__tests__/: dataConverters.test.ts
app/src/lib/hooks/: useDataFetcher.ts  usePollOperations.ts  useRealtimePolls.ts  useWalletManager.ts
programs/instinctfi/: Cargo.toml
programs/instinctfi/src/: errors.rs  lib.rs  state.rs
programs/instinctfi/src/instructions/: admin_edit_poll.rs  admin_settle_poll.rs  cast_vote.rs  claim_reward.rs  create_poll.rs  edit_poll.rs  mint_vote_token.rs  mod.rs  refund_tied_poll.rs  settle_poll.rs  sweep_dust.rs
programs/poll_program/: Cargo.toml
programs/poll_program/src/: errors.rs  lib.rs  state.rs
programs/poll_program/src/instructions/: create_poll.rs  delete_poll.rs  edit_poll.rs  mod.rs  record_vote.rs  settle_cpi.rs
programs/settlement_program/: Cargo.toml
programs/settlement_program/src/: errors.rs  lib.rs
programs/settlement_program/src/instructions/: claim_reward.rs  mod.rs  settle_poll.rs
programs/user_program/: Cargo.toml
programs/user_program/src/: errors.rs  lib.rs  state.rs
programs/user_program/src/instructions/: claim_weekly_reward.rs  credit_balance.rs  debit_balance.rs  mod.rs  signup.rs
programs/vote_program/: Cargo.toml
programs/vote_program/src/: errors.rs  lib.rs  state.rs
programs/vote_program/src/instructions/: cast_vote.rs  mark_claimed.rs  mod.rs
tests/: voting.ts
(+12 files in other folders)
