[workspace]
members = [
    "programs/instinctfi",
]
exclude = [
    "programs/poll_program",
    "programs/settlement_program",
    "programs/user_program",
    "programs/vote_program",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.dev]
overflow-checks = true
