[package]
name = "user_program"
version = "0.1.0"
description = "User accounts, signup, rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "user_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cbs = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
