[package]
name = "vote_program"
version = "0.1.0"
description = "Voting and option-coin purchase"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vote_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cbs = []
default = []

[dependencies]
anchor-lang = "0.30.1"
poll_program = { path = "../poll_program", features = ["no-entrypoint"] }
