[package]
name = "vote_program"
version = "0.1.0"
description = "Voting and option-coin purchase"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vote_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cbs = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
poll_program = { path = "../poll_program", features = ["cpi"] }
user_program = { path = "../user_program", features = ["cpi"] }
